sandc/test/fixtures/astRegression/shouldSucceed/productions/nonAssignableExpression/IfExpression.sand
pub class IfExpression {
    foo() {
        [
            if cond {
                a
            } else {
                a
            },

            if cond {
                a
            } else if cond {
                a
            } else {
                a
            },

            if cond {
                a
            } else if cond {
                a
            } else if cond {
                a
            } else {
                a
            },
        ]
    }
}