sandc/test/fixtures/astRegression/shouldFail/productions/statement/IfStatementWithTypeGuardInElseIfClause.sand
pub class IfStatementWithTypeGuardInElseIfClause {
    foo() {
        if cond {

        } else if let a = b {

        } else {
            
        }
    }
}